# foundation-models-spatial-benchmark

./: .gitignore  FINDINGS.md  README.md  requirements.txt
damage/: pyproject.toml
damage/damage/: __init__.py  core.py  generators.py  paths.py  render.py
paper/: .gitignore  README.md  main.tex  refs.bib
results/: benchmark_results.csv  benchmark_results.legacy_scoring.csv  env_check.json  env_check.md  methods_env.md  runtime_flags.csv  runtime_flags.md
results/damage_examples/: README.md  example_artifact.npz
scripts/: sweep_watchdog.ps1
src/: _worker.py  datasets.py  env_check.py  finalize.py  methods.py  metrics.py  plots.py  render_damage_examples.py  run_benchmark.py
